--- a/static/css/template.css
+++ b/static/css/template.css
@@ -210,7 +210,7 @@ Grocery List
   color: #155724;
   background: #d4edda;
 }
-.todo-form h3 {
+.token-form h3 {
   color: var(--clr-primary-1);
   margin-bottom: 1.5rem;
   text-align: center;
@@ -241,6 +241,23 @@ input[type=text]::placeholder {
   font-family: var(--ff-secondary);
   color: var(--clr-grey-5);
 }
+input[type=number] {
+  width: 100%;
+  display: block;
+  padding: 0.25rem;
+  padding-left: 1rem;
+  background: var(--clr-grey-10);
+  border-top-left-radius: var(--radius);
+  border-bottom-left-radius: var(--radius);
+  border-color: transparent;
+  font-size: 1rem;
+  flex: 1 0 auto;
+  color: var(--clr-grey-5);
+}
+input[type=number]::placeholder {
+  font-family: var(--ff-secondary);
+  color: var(--clr-grey-5);
+}
 .submit-btn {
   background: var(--clr-primary-8);
   border-color: transparent;
@@ -262,7 +279,7 @@ input[type=text]::placeholder {
   color: var(--clr-white);
 }
 
-.todo-container {
+.token-container {
   margin-top: 2rem;
   transition: var(--transition);
   visibility: hidden;
@@ -270,7 +287,7 @@ input[type=text]::placeholder {
 .show-container {
   visibility: visible;
 }
-.todo-item {
+.token-item {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -280,11 +297,11 @@ input[type=text]::placeholder {
   border-radius: var(--radius);
   text-transform: capitalize;
 }
-.todo-item:hover {
+.token-item:hover {
   color: var(--clr-grey-5);
   background: var(--clr-grey-10);
 }
-.todo-item:hover .title {
+.token-item:hover .title {
   color: var(--clr-grey-5);
 }
 .title {
