--- a/templates/about.html
+++ b/templates/about.html
@@ -13,7 +13,7 @@
     <p><b>Crypto Stuff:</b></p>
     <ul>
       <li>
-        <a href="{{ url_for('tokens') }}">Tokens Page</a>
+        <a href="{{ url_for('tokens') }}">Crypto Page</a>
       </li>
     </ul>
 
