--- a/templates/crypto.html
+++ b/templates/crypto.html
@@ -24,7 +24,7 @@
                 <input type="text" id='ticker' placeholder="SGB" />
                 <input type="number" id='amount' placeholder="1000000" step="0.01" min="0" />
                 <button type='submit' class='submit-btn'>
-                    Submit
+                    Add
                 </button>
             </div>
         </form>
