--- a/templates/template.html
+++ b/templates/template.html
@@ -14,7 +14,7 @@
           <ul class="menu">
             <li class="my-list"><a href="{{ url_for('home') }}">Home</a></li>
             <li class="my-list"><a href="{{ url_for('about') }}">About</a></li>
-            <li class="my-list"><a href="{{ url_for('tokens') }}">Tokens</a></li>
+            <li class="my-list"><a href="{{ url_for('tokens') }}">Crypto</a></li>
           </ul>
         </nav></strong>
       </div>
