signup flow works and login is in-progress

--- a/templates/about.html
+++ b/templates/about.html
@@ -10,10 +10,24 @@
 
     <br>
     <h2>About</h2>
-    <p><b>Crypto Stuff:</b></p>
+    <p><b>Just some fun projects I put together :)</b></p>
+    <br>
+    <h3>Helpful Crypto Links:</h3>
     <ul>
       <li>
-        <a href="{{ url_for('tokens') }}">Crypto Page</a>
+        <a href="https://nomics.com/watchlist?view=portfolio" target="_blank">Nomics</a>
+      </li>
+      <li>
+        <a href="https://www.livecoinwatch.com/" target="_blank">LiveCoin Watch</a>
+      </li>
+      <li>
+        <a href="https://app.pangolin.exchange/" target="_blank">Pangolin DEFI</a>
+      </li>
+      <li>
+        <a href="https://xff.flr.finance/" target="_blank">Flare Finance</a>
+      </li>
+      <li>
+        <a href="https://xrpscan.com/" target="_blank">XRP Ledger via XRP Scan</a>
       </li>
     </ul>
 
