--- a/static/css/template.css
+++ b/static/css/template.css
@@ -258,6 +258,40 @@ input[type=number]::placeholder {
   font-family: var(--ff-secondary);
   color: var(--clr-grey-5);
 }
+input[type=email] {
+  width: 100%;
+  display: block;
+  padding: 0.25rem;
+  padding-left: 1rem;
+  background: var(--clr-grey-10);
+  border-top-left-radius: var(--radius);
+  border-bottom-left-radius: var(--radius);
+  border-color: transparent;
+  font-size: 1rem;
+  flex: 1 0 auto;
+  color: var(--clr-grey-5);
+}
+input[type=email]::placeholder {
+  font-family: var(--ff-secondary);
+  color: var(--clr-grey-5);
+}
+input[type=password] {
+  width: 100%;
+  display: block;
+  padding: 0.25rem;
+  padding-left: 1rem;
+  background: var(--clr-grey-10);
+  border-top-left-radius: var(--radius);
+  border-bottom-left-radius: var(--radius);
+  border-color: transparent;
+  font-size: 1rem;
+  flex: 1 0 auto;
+  color: var(--clr-grey-5);
+}
+input[type=password]::placeholder {
+  font-family: var(--ff-secondary);
+  color: var(--clr-grey-5);
+}
 .submit-btn {
   background: var(--clr-primary-8);
   border-color: transparent;
