--- a/templates/login.html
+++ b/templates/login.html
@@ -3,6 +3,14 @@
 {% block content %}
 <div class="column is-4 is-offset-4">
     <h3 class="title">Login</h3>
+                {% with messages = get_flashed_messages() %}
+{% if messages %}
+        <p class="alert"></p>
+    <div class="alert-danger">
+        {{ messages[0] }}..
+    </div>
+{% endif %}
+{% endwith %}
     <div class="box">
         <form method="POST" action="/login">
             <div class="field">
