--- a/templates/signup.html
+++ b/templates/signup.html
@@ -8,20 +8,28 @@
         {% with messages = get_flashed_messages() %}
 {% if messages %}
     <div class="alert-danger">
-        {{ messages[0] }}. Go to <a href="{{ url_for('login') }}">login page</a>.
+        {{ messages[0] }}
     </div>
 {% endif %}
 {% endwith %}
         <form method="POST" action="/signup">
             <div class="field">
                 <div class="control">
+                    {% if email %}
+                    <input class="input is-large" type="email" name="email" value="{{ email }}" autofocus="">
+                    {% else %}
                     <input class="input is-large" type="email" name="email" placeholder="Email" autofocus="">
+                    {% endif %}
                 </div>
             </div>
 
             <div class="field">
                 <div class="control">
+                    {% if name %}
+                    <input class="input is-large" type="text" name="name" value="{{ name }}" autofocus="">
+                    {% else %}
                     <input class="input is-large" type="text" name="name" placeholder="Name" autofocus="">
+                    {% endif %}
                 </div>
             </div>
 
