--- a/templates/login.html
+++ b/templates/login.html
@@ -4,8 +4,8 @@
 <div class="column is-4 is-offset-4">
     <h3 class="title">Login</h3>
     <br>
-                {% with messages = get_flashed_messages() %}
-{% if messages %}
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
     {% if messages[0] == 'Successfully created user!' %}
     <p class="alert"></p>
     <div class="alert-success">
@@ -14,11 +14,11 @@
     {% else %}
     <p class="alert"></p>
     <div class="alert-danger">
-        {{ messages[0] }}
+        {{ messages[0] }} Or signup for a new account <a href="{{ url_for('signup') }}">Here</a>
     </div>
     {% endif %}
-{% endif %}
-{% endwith %}
+    {% endif %}
+    {% endwith %}
     <div class="box">
         <form method="POST" action="/login">
             <div class="field">
