--- a/templates/signup.html
+++ b/templates/signup.html
@@ -6,12 +6,12 @@
     <br>
     <div class="box">
         {% with messages = get_flashed_messages() %}
-{% if messages %}
-    <div class="alert-danger">
-        {{ messages[0] }}
-    </div>
-{% endif %}
-{% endwith %}
+        {% if messages %}
+        <div class="alert-danger">
+            {{ messages[0] }} Or login <a href="{{ url_for('login') }}">Here</a>
+        </div>
+        {% endif %}
+        {% endwith %}
         <form method="POST" action="/signup">
             <div class="field">
                 <div class="control">
