--- a/templates/template.html
+++ b/templates/template.html
@@ -15,6 +15,7 @@
             <li class="my-list"><a href="{{ url_for('home') }}">Home</a></li>
             <li class="my-list"><a href="{{ url_for('about') }}">About</a></li>
             <li class="my-list"><a href="{{ url_for('tokens') }}">Crypto</a></li>
+            <li class="my-auth-list"><a href="{{ url_for('logout') }}">Logout</a></li>
             <li class="my-auth-list"><a href="{{ url_for('login') }}">Login</a></li>
             <li class="my-auth-list"><a href="{{ url_for('signup') }}">Signup</a></li>
           </ul>
