--- a/templates/login.html
+++ b/templates/login.html
@@ -39,7 +39,7 @@
                     Remember me
                 </label>
             </div>
-            <button class="button is-block is-info is-large is-fullwidth">Login</button>
+            <button class="button submit-btn is-block is-info is-large is-fullwidth">Login</button>
         </form>
     </div>
 </div>
