--- a/templates/signup.html
+++ b/templates/signup.html
@@ -40,7 +40,7 @@
                 </div>
             </div>
 
-            <button class="button is-block is-info is-large is-fullwidth">Sign Up</button>
+            <button class="button submit-btn is-block is-info is-large is-fullwidth">Sign Up</button>
         </form>
     </div>
 </div>
