--- a/templates/template.html
+++ b/templates/template.html
@@ -17,6 +17,7 @@
             <li class="my-list"><a href="{{ url_for('tokens') }}">Crypto</a></li>
             {% if current_user.id %}
             <li class="my-auth-list"><a href="{{ url_for('logout') }}">Logout</a></li>
+            <li class="my-auth-list"><a href="{{ url_for('profile') }}">Profile</a></li>
             {% else %}
             <li class="my-auth-list"><a href="{{ url_for('login') }}">Login</a></li>
             <li class="my-auth-list"><a href="{{ url_for('signup') }}">Signup</a></li>
