added meta tags

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,12 @@
 {% extends "template.html" %}
 
 {% block content %}
+<head>
+    <meta charset="utf-8">
+    <title>Login</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='../static/css/template.css') }}">
+
+  </head>
 <div class="column is-4 is-offset-4">
     <br>
     <h3 class="title">Login</h3>
