--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,7 +3,7 @@
 {% block content %}
   <head>
     <meta charset="utf-8">
-
+    <title>Profile</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='../static/css/template.css') }}">
 
   </head>
