added helpful links

--- a/templates/about.html
+++ b/templates/about.html
@@ -10,7 +10,29 @@
 
     <br>
     <h2>About</h2>
-    <p><b>Just some fun projects I put together :)</b></p>
+    <p><b>Wanted a simple crypto tracker to see general info.</b></p>
+    <br>
+    <h3>Links That Made This Project Come Together:</h3>
+    <ul>
+      <li>
+        <a href="https://stackoverflow.com/questions/197748/how-do-i-change-the-background-color-with-javascript" target="_blank">CSS Background Color Manipulation</a>
+      </li>
+      <li>
+        <a href="https://css-tricks.com/a-complete-guide-to-dark-mode-on-the-web/#aa-using-javascript-local-storage" target="_blank">More CSS Background Tricks</a>
+      </li>
+      <li>
+        <a href="https://www.kirsle.net/wizards/flask-session.cgi" target="_blank">Helpful Cookie Decoder For Testing</a>
+      </li>
+      <li>
+        <a href="https://www.codingninjas.com/codestudio/library/handling-cookies-in-flask" target="_blank">Handling Cookies In Flask</a>
+      </li>
+      <li>
+        <a href="https://hackersandslackers.com/flask-login-user-authentication/" target="_blank">Flask Login Help</a>
+      </li>
+      <li>
+        <a href="https://medium.com/bhavaniravi/build-your-1st-python-web-app-with-flask-b039d11f101c" target="_blank">General Flask Implementation Tutorial</a>
+      </li>
+    </ul>
     <br>
     <h3>Helpful Crypto Links:</h3>
     <ul>
