fixed issue on create not querying correctly

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -15,5 +15,6 @@
 <a>Your email is: {{email}}</a><br>
 <p>Checkout your
       <a href="{{ url_for('tokens') }}">Crypto Holding Page</a>
-      for more info on what is currently available!</p>
+</p>
+<button class='btn' onclick="myFunction()">Toggle dark mode</button>
 {% endblock %}
