--- a/templates/template.html
+++ b/templates/template.html
@@ -31,5 +31,12 @@
     {% block content %}
     {% endblock %}
 
+    <script>
+    function myFunction() {
+    var element = document.body;
+    element.classList.toggle("dark-mode");
+    }
+</script>
+
   </body>
 </html>
