--- a/static/css/template.css
+++ b/static/css/template.css
@@ -73,6 +73,11 @@ body {
   line-height: 1.5;
   font-size: 0.875rem;
 }
+/* Dark Mode styles */
+.dark-mode {
+  color: #eee;
+  background: #121212;
+}
 ul {
   list-style-type: none;
 }
