--- a/templates/crypto.html
+++ b/templates/crypto.html
@@ -15,6 +15,9 @@
 {% block content %}
 
 <br>
+<h2 class="title">Crypto Page</h2>
+<p><b>Just need to add price pulling!</b></p>
+<button class='btn' onclick="myFunction()">Toggle dark mode</button>
     <section class='section-center'>
         <form class='token-form'>
             <p class="alert"></p>
@@ -23,6 +26,7 @@
                 <input type="text" id='name' placeholder="Songbird" />
                 <input type="text" id='ticker' placeholder="SGB" />
                 <input type="number" id='amount' placeholder="1000000" step="0.01" min="0" />
+                <input type="hidden" id='user_email' value="{{ user_email }}">
                 <button type='submit' class='submit-btn'>
                     Add
                 </button>
