--- a/templates/crypto.html
+++ b/templates/crypto.html
@@ -15,7 +15,7 @@
 {% block content %}
 
 <br>
-<h2 class="title">Crypto Page</h2>
+<h2>Crypto Page</h2>
 <p><b>Just need to add price pulling!</b></p>
 <button class='btn' onclick="myFunction()">Toggle dark mode</button>
     <section class='section-center'>
