building out profile page and minor updates

--- a/templates/about.html
+++ b/templates/about.html
@@ -11,7 +11,7 @@
     <br>
     <h2>About</h2>
     <p><b>Wanted a simple crypto tracker to see general info.</b></p>
-    <button class='btn' onclick="myFunction()">Toggle dark mode</button>
+    <button class='btn' onclick="flipTheLights()">Toggle dark mode</button>
     <br>
     <h3>Links That Made This Project Come Together:</h3>
     <ul>
