--- a/templates/crypto.html
+++ b/templates/crypto.html
@@ -27,7 +27,7 @@
 <br>
 <h2>Crypto Page</h2>
 <p><b>Just need to add price pulling!</b></p>
-<button class='btn' onclick="myFunction()">Toggle dark mode</button>
+<button class='btn' onclick="flipTheLights()">Toggle dark mode</button>
     <section class='section-center'>
         <form class='token-form'>
             <p class="alert"></p>
