--- a/templates/template.html
+++ b/templates/template.html
@@ -32,7 +32,7 @@
     {% endblock %}
 
     <script>
-    function myFunction() {
+    function flipTheLights() {
     var element = document.body;
     element.classList.toggle("dark-mode");
     }
