--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
     <p>Checkout the
       <a href="{{ url_for('about') }}">About Page</a>
       for more info on what is currently available!</p>
-    <button class='btn' onclick="myFunction()">Toggle dark mode</button>
+    <button class='btn' onclick="flipTheLights()">Toggle dark mode</button>
     <br>
     <p class="codepen" data-height="750" data-theme-id="0" data-default-tab="result" data-user="ChynoDeluxe" data-slug-hash="WGQzWW" style="height: 750px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Random Gif Generator w/ Giphy API" />
     <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
