Added account address to tokens with xrp balance lookup

--- a/templates/crypto.html
+++ b/templates/crypto.html
@@ -33,9 +33,10 @@
             <p class="alert"></p>
             <h3>Crypto List</h3>
             <div class="form-control">
-                <input type="text" id='name' placeholder="Songbird" />
-                <input type="text" id='ticker' placeholder="SGB" />
+                <input type="text" id='name' placeholder="Token Name" />
+                <input type="text" id='ticker' placeholder="Ticker" />
                 <input type="number" id='amount' placeholder="1000000" step="0.01" min="0" />
+                <input type="text" id='accountAddress' placeholder="Account Address" />
                 <input type="hidden" id='user_email' value="{{ user_email }}">
                 <button type='submit' class='submit-btn'>
                     Add
