--- a/templates/profile.html
+++ b/templates/profile.html
@@ -17,10 +17,15 @@
   <form class='token-form'>
     <p class="alert"></p>
     <h3>Account Settings</h3>
+    <hr><br>
     <div class="form-control">
+      <h4 class="title">Password:</h4>
       <input type="password" id='pass1' placeholder="Current Password" />
       <input type="password" id='pass2' placeholder="New Password" />
       <input type="password" id='pass3' placeholder="New Password Again" />
+      <hr>
+      <h4 class="title">Account Info:</h4>
+      <input type="text" id='name' placeholder="Account Name" />
       <button type='submit' class='submit-btn'>
         Update
       </button>
