grab tezos balance from provided account

--- a/templates/about.html
+++ b/templates/about.html
@@ -15,6 +15,17 @@
 <br>
 <section class='section-center'>
     <form class='token-form'>
+        <h3>Prices and account balances pulled from:</h3>
+        <ul>
+            <li>
+                <a href="https://docs.xrpscan.com/api-doc.html"
+                   target="_blank">XRP Scan</a>
+            </li>
+            <li>
+                <a href="https://api.tzstats.com/explorer"
+                   target="_blank">Tezos Explorer</a>
+            </li>
+        </ul>
         <h3>Links That Made This Project Come Together:</h3>
         <ul>
             <li>
