--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Home</title>
   </head>
-  <body>
+  <body class="dark-mode">
     {% extends "template.html" %}
     {% block content %}
 
