--- a/templates/template.html
+++ b/templates/template.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='../static/css/template.css') }}">
 
 </head>
-<body>
+<body class="dark-mode">
 <header>
     <div class="container">
         <h1 class="logo">Crypto Watcher</h1>
